# IKKN

./: NLSE.ipynb  NLSE_random.ipynb  NLSE_w_RAD.ipynb  ODLC.ipynb  README.md  beta.ipynb  pyproject.toml  rad3.ipynb  weights_rad2.pt  weights_random.pt
weights/: weights_rad.pt
