[project]
name = "ikkn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "matplotlib>=3.10.3",
    "pydoe>=0.3.8",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
